--- a/styles/styles.css
+++ b/styles/styles.css
@@ -23,12 +23,28 @@ button {
 
 input[type="text"] {
   width: 100%;
-  height: 100%;
   text-align: right;
   border: 2px solid gray;
 
   padding: 10px;
   font-size: 30px;
+}
+
+.display {
+  padding: 10px;
+  height: 100px;
+}
+
+.display > .main {
+  height: 60%;
+  border-top: none;
+}
+
+.display > .sub {
+  height: 40%;
+  font-size: 100%;
+  margin-bottom: 0;
+  border-bottom: none;
 }
 
 .calculator {
@@ -39,11 +55,6 @@ input[type="text"] {
 
   display: flex;
   flex-direction: column;
-}
-
-.display {
-  padding: 10px;
-  height: 100px;
 }
 
 .buttons {
